--- a/introducao.html
+++ b/introducao.html
@@ -16,7 +16,7 @@
               <div class="imagem">
                 <img src="img/MOON MAIS CERTO .png">
                </div>
-          <div class="assinar">
+          <div class="assine aqui">
           <a href="formularioassinar.html"><button>ASSINAR AGORA</button></a>
           
           </div>
