--- a/introducao.html
+++ b/introducao.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-Vindo/Moon Less</title>
-    <link rel="stylesheet" href="css/introducao.css">
-    <link rel="stylesheet" href="css/carrossel.css">
+    <link rel="stylesheet" href="introducao.css">
+    <link rel="stylesheet" href="carrossel.css">
 </head>
 <body>
     <header>
